# BankLab

./: .gitignore  LICENSE  Makefile  README.md  data_manifest.yml  pyproject.toml
.github/workflows/: ci.yml
data/: data_manifest.yml
data/processed/: .gitkeep  data_dictionary.csv  factor_exposures.parquet  factors_daily.parquet  fundamentals_quarterly.parquet  fundamentals_quarterly_wide.parquet  fundamentals_raw_facts.parquet  kpis_quarterly.parquet  macro_monthly.parquet  max_drawdowns.parquet  prices_daily.parquet  quality_report.csv  return_metrics.parquet  returns_daily.parquet  returns_quarterly.parquet  rolling_betas.parquet
docs/: README.md  README_PHASE3.md  VERIFICATION_CHECKLIST.md
notebooks/: 01_basic_analysis.ipynb
r/: macro_models.R  utils.R
reports/: fundamentals_review.qmd  macro_sensitivity.qmd  market_analytics.qmd
reports/exhibits/: .gitkeep
src/banklab/: __init__.py  config.py  run.py
src/banklab/clean/: __init__.py  xbrl_normalize.py
src/banklab/econometrics/: __init__.py  modeling_dataset.py
src/banklab/ingest/: __init__.py  factors.py  macro.py  market.py  sec.py
src/banklab/kpi/: __init__.py  kpi.py
src/banklab/market/: __init__.py  event_study.py  factors.py  pipeline.py  returns.py
src/banklab/process/: __init__.py  fundamentals.py  pipeline.py
src/banklab/quality/: __init__.py  checks.py
src/banklab/utils/: __init__.py  cache.py  http.py
stata/: 01_data_prep.do  02_panel_regs.do  03_robustness.do  run_all.do
tests/: __init__.py  conftest.py  test_factors.py  test_kpi.py  test_macro.py  test_market.py  test_normalize.py  test_pipeline.py  test_quality.py  test_sec.py  test_utils.py
